Issue #16 | Integrated DataSummary Dialog at various ingress points